--- a/index.html
+++ b/index.html
@@ -69,17 +69,17 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-12 col-md-4 text-center py-5">
+            <div class="col-12 col-md-4 text-center py-5 indigoBackground">
                 <h3>Guesses Left:
                     <span id="guesses-left">0</span>
                 </h3>
             </div>
-            <div class="col-12 col-md-4 text-center py-5">
+            <div class="col-12 col-md-4 text-center py-5 indigoBackground">
                 <h3>Wins:
                     <span id="wins">0</span>
                 </h3>
             </div>
-            <div class="col-12 col-md-4 text-center py-5">
+            <div class="col-12 col-md-4 text-center py-5 indigoBackground">
                 <h3>Losses:
                     <span id="losses">0</span>
                 </h3>
